fix animation and horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
             box-sizing: border-box;
         }
 
+        /* Apply to html and body */
+        html, body {
+        overflow-x: hidden;
+        }
+
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
@@ -82,6 +87,7 @@
 
         .col-1 {
             flex: 0 0 150px;
+            margin-left: 1rem;
             text-align: right;
             min-width: 0;
             align-self: flex-start;
